Fixing FF Linux issue with the graph not showing up, reduce left panel margin by 1px

--- a/css/app.css
+++ b/css/app.css
@@ -1662,7 +1662,7 @@ div.right-main {
         /* line 571, ../sass/_mm-scenario.scss */
         div.right-main div.tabs-content > div.content#panel-scenario > div.scenario > div.panel-left {
           width: 335px;
-          margin: 0 16px 0 0;
+          margin: 0 15px 0 0;
           padding-left: 0; }
           /* line 576, ../sass/_mm-scenario.scss */
           div.right-main div.tabs-content > div.content#panel-scenario > div.scenario > div.panel-left label {
