--- a/sass/_mm-scenario.scss
+++ b/sass/_mm-scenario.scss
@@ -570,7 +570,7 @@ div.right-main {
 
         &.panel-left {
           width: $scenario-panel-left-width;
-          margin: 0 16px 0 0;
+          margin: 0 15px 0 0;
           padding-left: 0;
           //overflow: auto;
           label {
